# buggy-openapi

./: .gitignore  README.md  docker-compose.owasp.yml  docker-compose.yml  mock.sh  package-lock.json  package.json  pyproject.toml  sitespeedio.sh
.github/workflows/: openapi-ci-python-flask.yml  openapi-ci.yml  openapi-pages.yml
api/: petstore.swagger.yml
locust/: README.md  my_locust_file.py
openapitools/: index.html
redoc/: index.html
sitespeedio/: target.txt
test/: pet.json
