[tool.poetry]
authors = ["kannkyo <15080890+kannkyo@users.noreply.github.com>"]
description = "openapi sample with vuls"
license = "MIT"
name = "buggy-openapi"
version = "0.0.1"

[tool.poetry.dependencies]
locust = "^2.5.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
